--- a/static/css/mainPageStyle/mainStyle.scss
+++ b/static/css/mainPageStyle/mainStyle.scss
@@ -19,6 +19,7 @@
         "../shared/onload",
         "../shared/popUpBalls",
         "../shared/gameGift",
+        "../shared/addFio",
         "../shared/checkRegistration";
 
 body {
