--- a/static/css/shared/_addFio.scss
+++ b/static/css/shared/_addFio.scss
@@ -1,16 +1,17 @@
-.registration-check-wrapper {
+.add-fio-wrapper {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
 }
 
-.registration-check-container {
+.add-fio-container {
   background-color: var(--background-color);
   width: 30vw;
   height: 12vw;
@@ -31,7 +32,7 @@
     row-gap: 4vw;
   }
 
-  .registration-check-head {
+  .add-fio-head {
     position: relative;
     width: 100%;
     display: flex;
@@ -40,10 +41,10 @@
     font-size: 2vw;
 
     @include mobile {
-      font-size: 7vw;
+      font-size: 5vw;
     }
 
-    .registration-check-head-cross {
+    .add-fio-head-cross {
       width: 1.5vw;
       position: absolute;
       right: 1vw;
@@ -58,7 +59,7 @@
     }
   }
 
-  .registration-check-form {
+  .add-fio-form {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -68,67 +69,65 @@
       row-gap: 3vw;
     }
 
-    .registration-check-input-container {
+    .add-fio-input-container {
       display: flex;
       align-items: center;
       width: 100%;
+      justify-content: center;
 
-      .registration-check-input-label {
+      .add-fio-input-label {
         font-size: 1.5vw;
         margin-right: 1vw;
-        margin-left: 1vw;
 
         @include mobile {
           font-size: 4.5vw;
           margin-right: 2vw;
-          margin-left: 2vw;
         }
       }
 
-      .registration-check-input {
+      .add-fio-input {
         height: 2.5vw;
         border-radius: 2vw;
         padding-left: 1vw;
         color: black;
-        width: 21.7vw;
+        width: 21.5vw;
         font-size: 1vw;
 
         @include mobile {
           height: 8.5vw;
           border-radius: 5vw;
           padding-left: 2vw;
-          width: 53.5vw;
+          width: 56.5vw;
           font-size: 3vw;
         }
       }
     }
 
-    .registration-check-button-container {
+    .add-fio-button-container {
       width: 100%;
       display: flex;
       justify-content: space-between;
 
-      .registration-check-response {
+      .add-fio-response {
         display: flex;
         align-items: center;
         color: red;
-        margin-left: 1vw;
-        font-size: 1vw;
-        width: 57%;
+        margin-left: 2vw;
+        font-size: 0.8vw;
+        width: 50%;
 
         @include mobile {
-          font-size: 2.6vw;
+          font-size: 2.5vw;
           margin-left: 3vw;
-          width: 58%;
         }
       }
 
-      .registration-check-button {
+      .add-fio-button {
         height: 2vw;
         width: 9vw;
         border-radius: 2vw;
         background-color: #FF4A15;
-        margin-right: 1.1vw;
+        margin-right: 2.1vw;
         font-size: 1.1vw;
         cursor: pointer;
         position: relative;
@@ -142,10 +141,10 @@
         }
 
         @include mobile {
-          height: 6vw;
-          width: 23vw;
+          height: 7vw;
+          width: 30vw;
           border-radius: 4vw;
-          margin-right: 3.5vw;
+          margin-right: 4.1vw;
           font-size: 3.1vw;
         }
       }
