--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
                 <input class="registration-number-input tel" type="text" name="number" id="regNumber" placeholder="Введите ваш номер телефона" required autocomplete="off"/>
             </div>
             <div class="registration-submit-button-container">
+                <div class="registration-response"></div>
                 <button class="registration-submit-button" type="submit">
                     Отправить
                 </button>
@@ -42,6 +43,7 @@
                 <input class="login-number-input tel" type="text" name="number" id="logNumber" placeholder="Введите ваш номер телефона" required/>
             </div>
             <div class="login-submit-button-container">
+                <div class="login-response"></div>
                 <button class="login-submit-button" type="submit">
                     Отправить
                 </button>
