--- a/static/css/supplierPageStyle/_reviews.scss
+++ b/static/css/supplierPageStyle/_reviews.scss
@@ -5,89 +5,162 @@
   color: #6D6D6D;
   display: flex;
   flex-direction: column;
-  padding: 0.2vw 2.5vw 2vw 2.5vw;
-  row-gap: 1.5vw;
+  padding: 1vw 2.5vw 2vw 2.5vw;
+  row-gap: 1vw;
 
   @include mobile {
-    padding: 0.2vw 4vw 5vw 4vw;
+    padding: 1vw 4vw 5vw 4vw;
     row-gap: 3vw;
   }
 
-
-  .reviews-header {
+  .reviews-container-supplier {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
 
-    &__logo {
-      width: 11vw;
-      margin-left: 3.5vw;
-
-      @include mobile {
-        width: 27vw;
-      }
-    }
-
-    &__description {
-      font-size: 1.5vw;
-      margin-right: 16vw;
-
-      @include mobile {
-        font-size: 4.5vw;
-        margin-right: 15vw;
-      }
-    }
-  }
-
-  .reviews-gift-and-description {
-    display: flex;
-
-    .reviews-gift {
+    .reviews-supplier-photo {
       display: flex;
-      width: 18vw;
-      height: 18vw;
-      background-color: #D9D9D9;
-      border-radius: 3vw;
-      justify-content: center;
+      flex-direction: column;
+      width: 30%;
+      align-items: center;
+      row-gap: 1vw;
 
       @include mobile {
-        width: 35vw;
-        height: 35vw;
+        width: 40%;
       }
 
-      &__photo {
+      .reviews-supplier-logo {
+        width: 15vw;
+
+        @include mobile {
+          width: 30vw;
+        }
+      }
+      .reviews-gift {
+        display: flex;
+        width: 18vw;
+        height: 18vw;
+        background-color: #D9D9D9;
+        border-radius: 3vw;
+        justify-content: center;
+        font-size: 1.5vw;
+
+        @include mobile {
+          width: 35vw;
+          height: 35vw;
+        }
+      }
+    }
+
+    .reviews-description {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+      margin-left: 5vw;
+      align-items: center;
+      row-gap: 1vw;
+
+      .reviews-description-header {
+        font-size: 2vw;
+
+        @include mobile {
+          font-size: 5vw;
+        }
+      }
+
+      .reviews-description-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        word-break: break-word;
+        line-height: 1.25;
         font-size: 1vw;
 
         @include mobile {
           font-size: 2vw;
         }
-      }
-    }
 
-    .reviews-description-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 69%;
-      padding-left: 5vw;
-      padding-right: 2vw;
-      line-height: 1.25;
-      font-size: 1vw;
-
-      @include mobile {
-        width: 59%;
-        font-size: 2vw;
-      }
-
-      .reviews-text {
-        padding-right: 12vw;
-
-        @include mobile {
-          padding-right: 0;
+        .reviews-text {
+          text-align: center;
         }
       }
     }
   }
+  //.reviews-header {
+  //  display: flex;
+  //  align-items: center;
+  //  justify-content: space-between;
+  //
+  //  &__logo {
+  //    width: 11vw;
+  //    margin-left: 3.5vw;
+  //
+  //    @include mobile {
+  //      width: 23vw;
+  //      margin-left: 6.5vw;
+  //    }
+  //  }
+  //
+  //  &__description {
+  //    font-size: 1.5vw;
+  //    margin-right: 16vw;
+  //
+  //    @include mobile {
+  //      font-size: 4.5vw;
+  //      margin-right: 15vw;
+  //    }
+  //  }
+  //}
+
+  //.reviews-gift-and-description {
+  //  display: flex;
+  //
+  //  .reviews-gift {
+  //    display: flex;
+  //    width: 18vw;
+  //    height: 18vw;
+  //    background-color: #D9D9D9;
+  //    border-radius: 3vw;
+  //    justify-content: center;
+  //
+  //    @include mobile {
+  //      width: 35vw;
+  //      height: 35vw;
+  //    }
+  //
+  //    &__photo {
+  //      font-size: 1vw;
+  //
+  //      @include mobile {
+  //        font-size: 2vw;
+  //      }
+  //    }
+  //  }
+  //
+  //  .reviews-description-container {
+  //    display: flex;
+  //    flex-direction: column;
+  //    justify-content: space-between;
+  //    width: 69%;
+  //    padding-left: 5vw;
+  //    padding-right: 2vw;
+  //    line-height: 1.25;
+  //    font-size: 1vw;
+  //
+  //    @include mobile {
+  //      width: 59%;
+  //      font-size: 2vw;
+  //    }
+  //
+  //    .reviews-text {
+  //      padding-right: 12vw;
+  //
+  //      @include mobile {
+  //        padding-right: 0;
+  //      }
+  //    }
+  //  }
+  //}
 
   .reviews-comment-wrapper {
     display: flex;
@@ -204,6 +277,8 @@
           border-radius: 0.5vw;
           overflow: hidden;
 
+
+
           @include mobile {
             height: 12vw;
             width: 12vw;
@@ -213,6 +288,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
+            cursor: pointer;
           }
         }
       }
@@ -355,11 +431,24 @@
         .review-add-submit {
           margin-top: 1.25vw;
           display: flex;
-          justify-content: flex-end;
+          justify-content: space-between;
           color: white;
 
           @include mobile {
             margin-top: 2vw;
+          }
+
+          .review-response {
+            display: flex;
+            align-items: center;
+            color: red;
+            margin-left: 1vw;
+            font-size: 1vw;
+            width: 56%;
+
+            @include mobile {
+              font-size: 2vw;
+            }
           }
 
           &__button {
@@ -405,11 +494,28 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+
+  .review-close-full-screen {
+    position: absolute;
+    top: 3vw;
+    right: 4vw;
+    width: 3vw;
+    cursor: pointer;
+
+    @include mobile {
+      width: 10vw;
+    }
+  }
 }
 
 .review-image-full-screen-container {
   width: 65vw;
   height: 40vw;
+
+  @include mobile {
+    width: 78vw;
+    height: 165vw;
+  }
 
   .review-image-full-screen {
     width: 100%;
