--- a/static/css/mainPageStyle/_profileAndDateInfo.scss
+++ b/static/css/mainPageStyle/_profileAndDateInfo.scss
@@ -67,6 +67,7 @@
       margin-left: 5%;
       line-height: 1.25;
       position: relative;
+      background: none;
 
       &:hover {
         scale: 1.2;
