--- a/static/css/mainPageStyle/mainStyle.css
+++ b/static/css/mainPageStyle/mainStyle.css
@@ -458,6 +458,7 @@ svg * {
   margin-left: 5%;
   line-height: 1.25;
   position: relative;
+  background: none;
 }
 .profile-avatar-add-fio:hover {
   scale: 1.2;
