--- a/templates/gameStageTwo.html
+++ b/templates/gameStageTwo.html
@@ -34,7 +34,7 @@
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                Поставщики
+                                Победители
                             </li>
                         </ul>
                     </nav>
