--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                <a href="/suppliers">Победители</a>
+                                Победители
                             </li>
                         </ul>
                     </nav>
