--- a/templates/supplierPage.html
+++ b/templates/supplierPage.html
@@ -33,7 +33,7 @@
                                 <a href="/gifts">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
-                                Поставщики
+                                Победители
                             </li>
                         </ul>
                     </nav>
@@ -106,6 +106,7 @@
             </div>
         </div>
     </div>
+    <audio id="audio" loop><source src="../static/sounds/sound.mp3" type="audio/mpeg"/></audio>
     <script src="../static/js/supplier.js"></script>
 </body>
 </html>
